--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -21,6 +21,21 @@
     }
 }
 
+.annotator-overlay-poly {
+    position: absolute;
+    background-color: rgba(0, 118, 255, 0.55);
+    
+/*    position: absolute;*/
+    top: 0px;
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    width: 100%;
+    height: 100%;
+    z-index: 2147483648;
+    pointer-events: all;
+}
+
 .annotator-tickbar {
     //margin: 0;
     //padding: 0;
