Add seekbar tooltip

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 // Video player
 @import "video-player/video-player.scss";
 @import "video-player/video-player-bar.scss";
+@import "video-player/seekbar-tooltip.scss";
 
 // Annotator
 @import "annotator/annotator.scss";
