Restyle seekbar tooltip

--- a/sass/video-player/seekbar-tooltip.scss
+++ b/sass/video-player/seekbar-tooltip.scss
@@ -1,5 +1,5 @@
 .annotator-seekbar-tooltip {
-    background-color: #000000;
+    background-color: rgba(0.0, 0.0, 0.0, 0.7);
     width: auto;
     height: auto;
     left: 0px;
@@ -10,17 +10,11 @@
     border-width: 1px;
     border-color: white;
     border-radius: 5px;
-    
-/*    opacity: 0.75;*/
-}
 
-.annotator-seekbar-tooltip-content {
-    text-align: center;
-    vertical-align: middle !important;
-    color: white !important;
     p {
         color: white !important;
+        text-align: center !important;
+        vertical-align: middle !important;
         opacity: 1.0 !important;
     }
-/*    opacity: 1.0 !important;*/
 }
