Obey system font

--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -139,7 +139,7 @@
     resize: vertical;
     padding-top: 5px;
     padding-left: 5px;
-    font-family: "system-ui";
+    font: menu;
     font-size: 16px;
 }
 
