Update annotation-gui styling

--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -172,3 +172,15 @@
     margin: 0px;
     padding: 0px;
 }
+
+.annotator-cancel-button {
+    border-color: #F44336;
+    background-color: #F44336;
+    color: white;
+}
+
+.annotator-confirm-button {
+    border-color: #8BC34A;
+    background-color: #8BC34A;
+    color: white;
+}
