--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 // Vendor
 @import "vendor/qtip2.scss";
 @import "vendor/select2.scss";
+@import "vendor/font-awesome.scss";
 
 // Video player
 @import "video-player/video-player.scss";
