--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,3 +14,6 @@
 
 // Annotator
 @import "annotator/annotator.scss";
+
+// Web imports
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
