--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -1,7 +1,10 @@
 .annotator-container {
-    position:relative;
-    width: 100%;
+    //position: absolute;
+    //width: 100%;
     height: auto;
+    float:left;
+    display: inline-block;
+
 }
 
 
