Update GUI on add (broken), edit, delete

--- a/sass/video-player/video-player-bar.scss
+++ b/sass/video-player/video-player-bar.scss
@@ -26,6 +26,9 @@ $bar-text-color: #575757; //#ffffff;
     .ui-button{
         font-size: 11px;
     }
+    // .ui-button:active:focus {
+    //     outline: none;
+    // }
     // .ui-button-text-only .ui-button-text {
     //     padding: .1em .6em .2em;
     // }
