--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -67,7 +67,7 @@
     width: 100%;
     height: 100%;
     z-index: 2147483648;
-    pointer-events: all;
+    pointer-events: none;
 }
 
 .annotator-tickbar {
