Remove !important from styles where possible

--- a/sass/video-player/seekbar-tooltip.scss
+++ b/sass/video-player/seekbar-tooltip.scss
@@ -12,9 +12,9 @@
     border-radius: 5px;
 
     p {
-        color: white !important;
-        text-align: center !important;
-        vertical-align: middle !important;
-        opacity: 1.0 !important;
+        color: white;
+        text-align: center;
+        vertical-align: middle;
+        opacity: 1.0;
     }
 }
