--- a/sass/video-player/video-player-bar.scss
+++ b/sass/video-player/video-player-bar.scss
@@ -19,7 +19,7 @@ $bar-text-color: #575757; //#ffffff;
         margin-left: 5px;
         margin-right: 5px;
         font-family: Verdana, Geneva, sans-serif;
-        color: $bar-text-color !important;
+        color: $bar-text-color;
         user-select: none;
     }
 
