--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -48,7 +48,7 @@
         width: 100%;
         height: 100%;
         z-index: $base-z + 9;
-        pointer-events: none !important;
+        pointer-events: none;
         //mix-blend-mode: overlay;
         //background-blend-mode: overlay;
     }
@@ -145,7 +145,7 @@
     // box-shadow: inset 0 0 0px 1px rgb(255, 0, 0);
     // background-color: #FFF; //Should be invisible.
 
-    .breadcrumb{
+    .breadcrumb {
         border-radius: 50%;
         width: 10px;
         height: 10px;
