--- a/sass/video-player/video-player.scss
+++ b/sass/video-player/video-player.scss
@@ -3,7 +3,7 @@
     position: relative;
 }
 
-.-webkit-full-screen {
+.annotator-fullscreen {
   width: 100% !important;
   height: 100% !important;
 }
