--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -96,6 +96,23 @@
     }
 }
 
+.annotator-debug-controls {
+    position:relative;
+    background-color: rgba(121, 221, 121, 0.3);
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    > * {
+        margin: 5px 5px 5px 5px;
+    }
+
+
+}
+
 
 // POST interface
 
