Add message display for error messages

--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -196,3 +196,22 @@
 .annotator-confirm-button {
     @include accent-button(#FFFFFF, #8BC34A);
 }
+
+.annotator-message-overlay {
+    position: absolute;
+    background-color: rgba(52, 52, 52, 0.95);
+    width: 30%;
+    height: 30%;
+    margin: auto;
+    top: 35%;
+    left: 35%;
+    z-index: $base-z + 100;
+    pointer-events: none;
+    border-radius: 15px;
+
+    p {
+        color: white;
+        vertical-align: middle;
+        text-align: center;
+    }
+}
