Update message box styling, use promises in server-interface

--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -200,18 +200,34 @@
 .annotator-message-overlay {
     position: absolute;
     background-color: rgba(52, 52, 52, 0.95);
-    width: 30%;
-    height: 30%;
+    //width: 30%;
+    //height: 30%;
     margin: auto;
-    top: 35%;
-    left: 35%;
+    top: 0;
+    left: 0;
     z-index: $base-z + 100;
     pointer-events: none;
     border-radius: 15px;
+    text-align: center;
+    display: inline-block;
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     p {
+        display: inline-block;
         color: white;
-        vertical-align: middle;
+        position: relative;
+        //float: left;
         text-align: center;
+        //padding: 0;
+        //margin: 0;
+        //margin-top: 15px;
+        //margin-right: 30px;
+
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
     }
 }
