--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -198,36 +198,29 @@
 }
 
 .annotator-message-overlay {
-    position: absolute;
     background-color: rgba(52, 52, 52, 0.95);
-    //width: 30%;
-    //height: 30%;
+    position: absolute;
     margin: auto;
     top: 0;
     left: 0;
-    z-index: $base-z + 100;
-    pointer-events: none;
     border-radius: 15px;
     text-align: center;
     display: inline-block;
+    z-index: $base-z + 100;
+    pointer-events: none;
 
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
     p {
-        display: inline-block;
         color: white;
-        position: relative;
-        //float: left;
-        text-align: center;
-        //padding: 0;
-        //margin: 0;
-        //margin-top: 15px;
-        //margin-right: 30px;
+        font: menu;
 
-        // top: 50%;
-        // left: 50%;
-        // transform: translate(-50%, -50%);
+        display: inline-block;
+        position: relative;
+        text-align: center;
+        margin-left: 15px;
+        margin-right: 15px;
     }
 }
