--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -220,7 +220,6 @@
         display: inline-block;
         position: relative;
         text-align: center;
-        margin-left: 15px;
-        margin-right: 15px;
+        margin: 15px;
     }
 }
