Make container responsive

--- a/sass/annotator/annotator.scss
+++ b/sass/annotator/annotator.scss
@@ -3,6 +3,7 @@
     position: relative;
     height: auto;
     display: inline-block;
+    max-width: 100%;
 }
 
 // Overlay that holds all the polygons
