Improve login/logout modal organization

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 
 // Annotator
 @import "annotator/annotator.scss";
+@import "annotator/session-modal.scss";
 
 // Web imports
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
