--- a/testpage/css/testpage.css
+++ b/testpage/css/testpage.css
@@ -4,7 +4,14 @@ p {
 
 body {
     margin: 0;
-    display: inline-block;
+    /*display: inline-block;
     max-width: 100%;
-    width: 100%;
+    width: 100%;*/
+}
+
+video {
+    margin-left: auto; 
+    margin-right: auto; 
+    display: block;
+    max-width: 100%;
 }
