Add file import modal

--- a/sass/annotator/session-modal.scss
+++ b/sass/annotator/session-modal.scss
@@ -5,7 +5,7 @@
     label, input { 
         display: block; 
     }
-    input.text { 
+    input.text, input.file { 
         margin-bottom: 12px; 
         width: 95%; 
         padding: .4em; 
