Add basic error handling to annotation upload button

--- a/sass/annotator/session-modal.scss
+++ b/sass/annotator/session-modal.scss
@@ -37,6 +37,10 @@
         }
     }
 
+    .modal-error-text {
+        color: red;
+    }
+
     .ui-dialog .ui-state-error { 
         padding: .3em; 
     }
